--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
+
 *,
 *::after,
 *::before {
@@ -5,16 +7,211 @@
   padding: 0;
   text-decoration: 0;
   box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
   transition: all ease-in-out 0.5s;
 }
 
-/* Footer */
-/* attribution */
+/* custom properties */
 
+:root {
+  --p-blue: hsl(215, 51%, 70%);
+  --p-alpha: hsla(178, 100%, 50%, 0.5);
+  --p-cyan: hsl(178, 100%, 50%);
+  --p-purple: hsl(321, 100%, 50%);
+  --n-bg: hsl(217, 54%, 11%);
+  --n-card: hsl(216, 50%, 16%);
+  --n-line: hsl(215, 29%, 35%);
+  --n-white: hsl(0, 0%, 100%);
+}
+
+.p-blue {
+  color: var(--p-blue);
+}
+
+.p-cyan {
+  color: var(--p-cyan);
+}
+
+.n-card {
+  color: var(--n-card);
+}
+
+.n-line {
+  color: var(--n-line);
+}
+
+.n-white {
+  color: var(--n-white);
+}
+
+Body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: var(--n-bg);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
+  padding: 25px;
+  background-color: var(--n-card);
+  border-radius: 15px;
+  border: 0px solid #000;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+}
+
+.card {
+  position: relative;
+}
+
+.card-img {
+  display: block;
+  width: 100%;
+  border-radius: 7px;
+}
+
+.card-overlay {
+  display: flex;
+  position: absolute;
+  border-radius: 7px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./images/icon-view.svg) no-repeat center;
+  background-color: var(--p-alpha);
+  opacity: 0;
+}
+
+.card-overlay:hover {
+  opacity: 1;
+}
+
+.card-overlay > * {
+  transform: scale(150%);
+}
+
+.card-overlay:hover > * {
+  transform: scale(100%);
+}
+
+.container h1 {
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding-top: 12px;
+}
+
+.container h1:hover {
+  cursor: pointer;
+  color: var(--p-cyan);
+}
+
+.container p {
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
+.container ul li {
+  display: flex;
+  align-items: center;
+}
+
+.price {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.price li:first-child {
+  font-weight: 700;
+}
+
+.price li:first-child::before {
+  display: inline-block;
+  content: "";
+  background: url(./images/icon-ethereum.svg) no-repeat center;
+  width: 11px;
+  height: 18px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
+.price li:nth-child(2)::before {
+  display: inline-block;
+  content: "";
+  background: url(./images/icon-clock.svg) no-repeat center;
+  width: 17px;
+  height: 17px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
+.line {
+  display: flex;
+  background-color: var(--n-line);
+  width: auto;
+  height: 1px;
+}
+
+.creator {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 18px;
+}
+
+.creator img {
+  width: 32px;
+  height: 32px;
+  margin-right: 12px;
+  border: 1px solid var(--n-white);
+  border-radius: 50px;
+}
+
+.creator h2 {
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.creator a:hover {
+  color: var(--p-cyan);
+}
 .attribution {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 20px;
+  width: 100%;
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--p-cyan);
+}
+
+@media (max-width: 375px) {
+  .container {
+    min-width: 325px;
+  }
+  .container h1 {
+    font-size: 1.3rem;
+  }
+  .container p {
+    font-size: 16px;
+  }
+  .price {
+    padding: 18px 0;
+  }
+  .creator h2 {
+    font-size: 16px;
+  }
 }
